# solana-amm

./: .gitignore  Readme.md  notes.txt  package.json  tokenGenerate.ts
amm/: Anchor.toml
amm/programs/amm/: Cargo.toml
amm/programs/amm/src/: error.rs  lib.rs
amm/programs/amm/src/instructions/: init_pool.rs  mod.rs  provide_liquidity.rs  swap.rs  withdraw.rs
amm/programs/amm/src/state/: mod.rs  pool.rs  swap_side.rs
amm/tests/: amm.ts
app/: globals.css  layout.tsx
app/(main)/: layout.tsx  page.tsx
app/(main)/dashboard/: page.tsx
app/(main)/pools/: page.tsx
app/(main)/swap/: page.tsx
components/: create-pool.tsx  deposit-interface.tsx  header.tsx  pools-table.tsx  portfolio-card.tsx  stats-grid.tsx  swap-interface.tsx
hooks/: useProgram.ts
lib/: helper.ts  types.ts
